# clockify-plugin

./: .atualizar-docs.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  MAINTAINER.md  README.md  defaults.json
.claude-plugin/: marketplace.json
.claude/commands/: horas.md  lancar.md
clockify-cowork/: .mcp.json
clockify-cowork/.claude-plugin/: plugin.json
clockify-cowork/commands/: clockify-report.md  clockify-tracking.md  clockify.md
clockify-cowork/scripts/: pyproject.toml
clockify-cowork/scripts/clockify_cli/: __main__.py  cli.py  clockify.py  config.py  http_json.py  ics.py  prefs.py  pure.py  resolve.py
clockify-cowork/scripts/tests/: test_cli.py  test_clockify.py  test_config.py  test_ics.py  test_prefs.py  test_pure.py  test_resolve.py
clockify-plugin/.claude-plugin/: plugin.json
commands/: horas.md  lancar.md
plugins/clockify-horas/: pyproject.toml
plugins/clockify-horas/.claude-plugin/: plugin.json
plugins/clockify-horas/commands/: horas.md  lancar.md
plugins/clockify-horas/hooks/: hooks.json
plugins/clockify-horas/scripts/: ensure_cli.py
plugins/clockify-horas/skills/clockify-setup/: SKILL.md
plugins/clockify-horas/src/clockify_horas/: __init__.py  bizdays.py  cli.py  config.py  entries.py  history.py  learned.py  models.py
plugins/clockify-horas/tests/: conftest.py  test_bizdays.py  test_cli.py  test_clockify_api.py  test_config.py  test_config_subcommand.py  test_entries.py  test_history.py  test_ics.py  test_learned.py  test_models.py  test_smoke.py
plugins/clockify-plugin/: pyproject.toml
plugins/clockify-plugin/.claude-plugin/: plugin.json
plugins/clockify-plugin/commands/: horas.md  lancar.md
plugins/clockify-plugin/scripts/: ensure_cli.py
plugins/clockify-plugin/skills/clockify-setup/: SKILL.md
plugins/clockify-plugin/src/clockify_plugin/: bizdays.py  cli.py  clockify_api.py  config.py  entries.py  ics.py  learned.py
plugins/clockify-plugin/tests/: test_bizdays.py  test_cli.py  test_clockify_api.py  test_config.py  test_config_subcommand.py  test_entries.py  test_ics.py  test_learned.py  test_models.py  test_smoke.py
server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/src/clockify_mcp/: __init__.py  app.py  auth.py  clockify.py  context.py  crypto.py  ics.py  prefs.py  pure.py  resolve.py  serve.py  settings.py  tools.py
server/tests/: test_clockify_io.py  test_core.py  test_ics.py  test_identity.py  test_integration.py  test_prefs.py  test_pure.py  test_resolve.py  test_tools.py
tests/: conftest.py  test_cli.py  test_clockify_api.py  test_config.py  test_config_subcommand.py  test_entries.py  test_ics.py  test_models.py
(+45 files in other folders)
