[project]
name = "clockify-mcp"
version = "0.1.0"
description = "MCP server (OAuth stateless) que lança horas no Clockify a partir do Cowork"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4",
    "httpx>=0.27",
    "cryptography>=43",
    "pyjwt>=2.9",
]

[dependency-groups]
dev = ["pytest>=8", "respx>=0.21", "pytest-asyncio>=0.24"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clockify_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
