[project]
name = "clockify-plugin"
version = "1.0.0"
description = "Lançador de horas Clockify a partir do Outlook (ICS)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "icalendar>=6.0",
    "recurring-ical-events>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
clockify-plugin = "clockify_plugin.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
